--- a/bin/menu/createMenu.fxml
+++ b/bin/menu/createMenu.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -10,32 +11,46 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
 <VBox prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="menu.CreateNewMenuController">
    <children>
       <AnchorPane prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;">
          <children>
-            <Label alignment="CENTER" layoutX="-3.0" prefHeight="35.0" prefWidth="700.0" text="Create New Menu" textAlignment="CENTER" AnchorPane.bottomAnchor="596.0" AnchorPane.leftAnchor="-3.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="0.0">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
-            <Button fx:id="saveMenu" layoutX="457.0" layoutY="584.0" mnemonicParsing="false" onAction="#saveMenu" text="save menu" />
+            <Button fx:id="saveMenu" layoutX="606.0" layoutY="547.0" mnemonicParsing="false" onAction="#saveMenu" prefHeight="34.0" prefWidth="115.0" stylesheets="@../general/GeneralStyleSheet.css" text="save menu">
+               <styleClass>
+                  <String fx:value="ViewBtnOrange" />
+                  <String fx:value="lbl" />
+               </styleClass></Button>
             <ListView fx:id="DishesList" layoutX="301.0" layoutY="142.0" onMouseClicked="#setDishFields" prefHeight="134.0" prefWidth="169.0" AnchorPane.topAnchor="142.0" />
-            <Label fx:id="createMessageLabel" layoutX="518.0" layoutY="548.0" prefHeight="18.0" prefWidth="325.0" />
-            <ComboBox fx:id="ChooseMenuTypeComboBox" layoutX="383.0" layoutY="68.0" onAction="#chooseType" prefHeight="29.0" prefWidth="245.0" promptText="Dish Type" />
-            <Label fx:id="chooseDishMessage" layoutX="309.0" layoutY="120.0" prefHeight="18.0" prefWidth="156.0" />
-            <TextField fx:id="dishPrice" layoutX="311.0" layoutY="288.0" prefHeight="26.0" prefWidth="130.0" promptText="Price" />
-            <CheckBox fx:id="hasMultipleSizes" layoutX="311.0" layoutY="381.0" mnemonicParsing="false" text="Multiple sizes" />
-            <CheckBox fx:id="hasMultipleCockingLvls" layoutX="325.0" layoutY="416.0" mnemonicParsing="false" text="Multiple cooking levels" />
-            <CheckBox fx:id="canAddExtras" layoutX="325.0" layoutY="449.0" mnemonicParsing="false" text="Extras" />
-            <TextField fx:id="ImageName" editable="false" layoutX="311.0" layoutY="325.0" prefHeight="26.0" prefWidth="130.0" promptText="Image " />
-            <Button fx:id="ChooseImege" layoutX="460.0" layoutY="326.0" mnemonicParsing="false" onAction="#ChooseImege" text="Choose Image" />
-            <Label fx:id="errorMessage" layoutX="14.0" layoutY="45.0" prefHeight="18.0" prefWidth="357.0" />
-            <ListView fx:id="dishesToAdd" layoutX="563.0" layoutY="142.0" onMouseClicked="#displayDish" prefHeight="134.0" prefWidth="156.0" />
-            <Label fx:id="dishesToAddMessage" layoutX="568.0" layoutY="120.0" prefHeight="18.0" prefWidth="146.0" />
-            <Label fx:id="fileChooserMsg" layoutX="323.0" layoutY="398.0" prefHeight="18.0" prefWidth="343.0" />
+            <Label fx:id="createMessageLabel" layoutX="658.0" layoutY="548.0" prefHeight="18.0" prefWidth="185.0" />
+            <ComboBox fx:id="ChooseMenuTypeComboBox" layoutX="383.0" layoutY="68.0" onAction="#chooseType" prefHeight="29.0" prefWidth="245.0" promptText="Dish Type" stylesheets="@../general/GeneralStyleSheet.css">
+               <styleClass>
+                  <String fx:value="comboBox" />
+                  <String fx:value="lbl" />
+               </styleClass></ComboBox>
+            <Label fx:id="chooseDishMessage" layoutX="303.0" layoutY="118.0" prefHeight="22.0" prefWidth="171.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" />
+            <TextField fx:id="dishPrice" layoutX="449.0" layoutY="312.0" prefHeight="26.0" prefWidth="130.0" promptText="Price" stylesheets="@../general/GeneralStyleSheet.css">
+               <styleClass>
+                  <String fx:value="text-box" />
+                  <String fx:value="lbl" />
+               </styleClass></TextField>
+            <CheckBox fx:id="hasMultipleSizes" layoutX="455.0" layoutY="419.0" mnemonicParsing="false" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Multiple sizes" />
+            <CheckBox fx:id="hasMultipleCockingLvls" layoutX="455.0" layoutY="455.0" mnemonicParsing="false" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Multiple cooking levels" />
+            <CheckBox fx:id="canAddExtras" layoutX="455.0" layoutY="490.0" mnemonicParsing="false" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Extras" />
+            <TextField fx:id="ImageName" editable="false" layoutX="448.0" layoutY="364.0" prefHeight="26.0" prefWidth="130.0" promptText="Image " stylesheets="@../general/GeneralStyleSheet.css">
+               <styleClass>
+                  <String fx:value="text-box" />
+                  <String fx:value="lbl" />
+               </styleClass></TextField>
+            <Button fx:id="ChooseImege" layoutX="610.0" layoutY="369.0" mnemonicParsing="false" onAction="#ChooseImege" stylesheets="@../general/GeneralStyleSheet.css" text="Choose Image">
+               <styleClass>
+                  <String fx:value="ViewBtn" />
+                  <String fx:value="lbl" />
+               </styleClass></Button>
+            <Label fx:id="errorMessage" layoutX="802.0" layoutY="589.0" prefHeight="18.0" prefWidth="169.0" />
+            <ListView fx:id="dishesToAdd" layoutX="563.0" layoutY="142.0" onMouseClicked="#displayDish" prefHeight="134.0" prefWidth="169.0" stylesheets="@../general/GeneralStyleSheet.css" />
+            <Label fx:id="dishesToAddMessage" layoutX="568.0" layoutY="120.0" prefHeight="18.0" prefWidth="156.0" />
+            <Label fx:id="fileChooserMsg" layoutX="771.0" layoutY="555.0" prefHeight="18.0" prefWidth="210.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" />
             <ImageView fx:id="rightarrw_img" fitHeight="32.0" fitWidth="36.0" layoutX="502.0" layoutY="156.0" onMouseClicked="#saveDish" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/rightarrow.png" />
@@ -46,9 +61,14 @@
                   <Image url="@../img/leftarrow.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="plus_img" fitHeight="29.0" fitWidth="32.0" layoutX="272.0" layoutY="142.0" onMouseClicked="#AddDish" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="plus_img" fitHeight="45.0" fitWidth="32.0" layoutX="261.0" layoutY="190.0" onMouseClicked="#AddDish" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/plus.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="246.0" fitWidth="261.0" layoutX="40.0" layoutY="386.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../img/undraw_online_groceries_a02y.png" />
                </image>
             </ImageView>
          </children>
