--- a/bin/hr/RegNewEmployerScreen.fxml
+++ b/bin/hr/RegNewEmployerScreen.fxml
@@ -45,7 +45,7 @@
                         <Image url="@../img/EmployerIcon.png" />
                      </image>
                   </ImageView>
-                  <Label fx:id="res_lbl" layoutX="343.0" layoutY="438.0" prefHeight="27.0" prefWidth="255.0" />
+                  <Label fx:id="res_lbl" layoutX="386.0" layoutY="448.0" prefHeight="27.0" prefWidth="255.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" />
                   <ImageView fitHeight="25.0" fitWidth="78.0" layoutX="394.0" layoutY="313.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../img/PhoneIcon.png" />
@@ -56,19 +56,13 @@
                         <Image url="@../img/locationIcon.png" />
                      </image>
                   </ImageView>
-                  <Button layoutX="61.0" layoutY="582.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="70.0" stylesheets="@../general/GeneralStyleSheet.css" text="Back">
-                     <styleClass>
-                        <String fx:value="ViewBtn" />
-                        <String fx:value="lbl" />
-                     </styleClass>
-                  </Button>
                   <ImageView fitHeight="266.0" fitWidth="367.0" layoutX="679.0" layoutY="384.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../img/RegisterEmployeeImage.png" />
                      </image>
                   </ImageView>
-                  <Label fx:id="name_error_lbl" layoutX="586.0" layoutY="190.0" prefHeight="17.0" prefWidth="255.0" textFill="RED" />
-                  <Label fx:id="number_error_lbl" layoutX="592.0" layoutY="317.0" prefHeight="17.0" prefWidth="255.0" textFill="RED" />
+                  <Label fx:id="name_error_lbl" layoutX="592.0" layoutY="196.0" prefHeight="17.0" prefWidth="255.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" textFill="RED" />
+                  <Label fx:id="number_error_lbl" layoutX="592.0" layoutY="323.0" prefHeight="17.0" prefWidth="255.0" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" textFill="RED" />
                </children>
             </AnchorPane>
          </children>
