--- a/bin/general/UserLoginScreen.fxml
+++ b/bin/general/UserLoginScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +14,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #fff;" stylesheets="@GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.UserLoginController">
+<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #fff;" stylesheets="@GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.UserLoginController">
    <children>
       <BorderPane id="borderpane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" styleClass="borderpane" VBox.vgrow="ALWAYS">
          <left>
@@ -31,9 +32,21 @@
                                     <Font name="Levenim MT Bold" size="64.0" />
                                  </font>
                               </Label>
-                              <TextField id="test" fx:id="username_lbl" alignment="CENTER" layoutX="310.0" layoutY="369.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="220.0" promptText="Username" />
-                              <PasswordField fx:id="password_lbl" alignment="CENTER" layoutX="312.0" layoutY="454.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="219.0" promptText="Password" />
-                              <Button fx:id="login_btn" layoutX="388.0" layoutY="522.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#login_action" prefHeight="35.0" prefWidth="64.0" styleClass="ViewBtn" stylesheets="@GeneralStyleSheet.css" text="Login" />
+                              <TextField id="test" fx:id="username_lbl" alignment="CENTER" layoutX="310.0" layoutY="369.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="220.0" promptText="Username" stylesheets="@GeneralStyleSheet.css">
+                                 <styleClass>
+                                    <String fx:value="text-box" />
+                                    <String fx:value="lbl" />
+                                 </styleClass></TextField>
+                              <PasswordField fx:id="password_lbl" alignment="CENTER" layoutX="312.0" layoutY="454.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="25.0" prefWidth="219.0" promptText="Password" stylesheets="@GeneralStyleSheet.css">
+                                 <styleClass>
+                                    <String fx:value="lbl" />
+                                    <String fx:value="text-box" />
+                                 </styleClass></PasswordField>
+                              <Button fx:id="login_btn" layoutX="388.0" layoutY="522.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#login_action" prefHeight="35.0" prefWidth="64.0" stylesheets="@GeneralStyleSheet.css" text="Login">
+                                 <styleClass>
+                                    <String fx:value="ViewBtnOrange" />
+                                    <String fx:value="lbl" />
+                                 </styleClass></Button>
                               <ImageView fitHeight="120.0" fitWidth="135.0" layoutX="277.0" layoutY="209.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
                                     <Image url="@../img/FemaleIcon.png" />
@@ -55,7 +68,7 @@
                                  </image>
                               </ImageView>
                               <Label fx:id="login_res_lbl" layoutX="211.0" layoutY="589.0" prefHeight="17.0" prefWidth="397.0" textAlignment="CENTER" textFill="RED" />
-                              <Button fx:id="import_btn" layoutX="396.0" layoutY="633.0" mnemonicParsing="false" onAction="#import_users" text="import" />
+                              <Button fx:id="import_btn" layoutX="14.0" layoutY="764.0" mnemonicParsing="false" onAction="#import_users" text="import" />
                            </children>
                         </AnchorPane>
                      </children>
