--- a/bin/general/homePageCeo.fxml
+++ b/bin/general/homePageCeo.fxml
@@ -2,19 +2,19 @@
 
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="650.0" minWidth="1010.0" prefHeight="650.0" prefWidth="1010.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #ffff;" VBox.vgrow="ALWAYS">
+      <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
          <children>
-            <ImageView fitHeight="450.0" fitWidth="408.0" layoutX="376.0" layoutY="121.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="121.0" AnchorPane.leftAnchor="376.0" AnchorPane.rightAnchor="226.0" AnchorPane.topAnchor="121.0">
+            <ImageView fitHeight="450.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../img/employee-month.jpg" />
                </image>
             </ImageView>
          </children>
-      </AnchorPane>
+      </HBox>
    </children>
 </VBox>
