--- a/bin/report/ViewPdfScreen.fxml
+++ b/bin/report/ViewPdfScreen.fxml
@@ -1,19 +1,52 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.ViewPdfController">
    <children>
-      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
+      <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
          <children>
-            <ComboBox fx:id="branch_cmb" layoutX="430.0" layoutY="170.0" prefWidth="150.0" promptText="Branch" styleClass="comboBox" />
-            <ComboBox fx:id="quater_cmb" layoutX="430.0" layoutY="224.0" prefWidth="150.0" promptText="Quarter" styleClass="comboBox" />
-            <ComboBox fx:id="year_cmb" layoutX="430.0" layoutY="278.0" prefWidth="150.0" promptText="Year" styleClass="comboBox" />
-            <Button fx:id="open_btn" layoutX="487.0" layoutY="350.0" mnemonicParsing="false" onAction="#openPdf" styleClass="ViewBtn" text="Open" />
+            <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0">
+               <children>
+                  <ComboBox fx:id="branch_cmb" layoutX="430.0" layoutY="137.0" prefWidth="150.0" promptText="Branch">
+                     <styleClass>
+                        <String fx:value="comboBox" />
+                        <String fx:value="lbl" />
+                     </styleClass>
+                  </ComboBox>
+                  <ComboBox fx:id="quater_cmb" layoutX="430.0" layoutY="207.0" prefWidth="150.0" promptText="Quarter">
+                     <styleClass>
+                        <String fx:value="comboBox" />
+                        <String fx:value="lbl" />
+                     </styleClass>
+                  </ComboBox>
+                  <ComboBox fx:id="year_cmb" layoutX="430.0" layoutY="278.0" prefWidth="150.0" promptText="Year">
+                     <styleClass>
+                        <String fx:value="comboBox" />
+                        <String fx:value="lbl" />
+                     </styleClass>
+                  </ComboBox>
+                  <Button fx:id="open_btn" layoutX="465.0" layoutY="348.0" mnemonicParsing="false" onAction="#openPdf" prefHeight="36.0" prefWidth="79.0" text="Open">
+                     <styleClass>
+                        <String fx:value="ViewBtnOrange" />
+                        <String fx:value="lbl" />
+                     </styleClass>
+                  </Button>
+                  <ImageView fitHeight="264.0" fitWidth="383.0" layoutX="613.0" layoutY="384.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/undraw_Site_stats_re_ejgy.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </Pane>
          </children>
-      </Pane>
+      </HBox>
    </children>
 </VBox>
