--- a/bin/resturant/NewOrdersScreen.fxml
+++ b/bin/resturant/NewOrdersScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.NewOrderScreenController">
+<VBox xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.NewOrderScreenController">
    <children>
       <BorderPane prefHeight="650.0" prefWidth="1010.0">
          <center>
@@ -20,15 +20,15 @@
                               <Font name="Levenim MT Bold" size="18.0" />
                            </font>
                         </Label>
-                     </children>
-                  </VBox>
-                  <VBox alignment="CENTER" prefHeight="264.0" prefWidth="1010.0">
-                     <children>
-                        <Label fx:id="no_orders_lbl" prefHeight="38.0" prefWidth="304.0" text="No new orders" visible="false">
+                        <Label fx:id="no_orders_lbl" prefHeight="35.0" prefWidth="221.0" text="No new orders" textAlignment="CENTER" visible="false">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
                         </Label>
+                     </children>
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="264.0" prefWidth="1010.0">
+                     <children>
                         <Accordion fx:id="neworders_accordion" prefHeight="222.0" prefWidth="1010.0" styleClass="accordion" />
                      </children>
                   </VBox>
@@ -37,15 +37,15 @@
                      <children>
                         <Label alignment="CENTER" prefHeight="27.0" prefWidth="172.0" text="Orders to deliver">
                            <font>
-                              <Font size="18.0" />
+                              <Font name="Levenim MT Bold" size="18.0" />
                            </font>
                         </Label>
-                        <Accordion fx:id="orders_to_deliver_accordion" prefHeight="283.0" prefWidth="1010.0" />
                         <Label fx:id="No_delivery_lbl" text="No orders to deliver" visible="false">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
                         </Label>
+                        <Accordion fx:id="orders_to_deliver_accordion" prefHeight="283.0" prefWidth="1010.0" />
                      </children>
                   </VBox>
                   <Separator prefWidth="200.0" />
