--- a/src/gui/general/homePageCustomer.fxml
+++ b/src/gui/general/homePageCustomer.fxml
@@ -6,40 +6,35 @@
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
+      <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;">
          <children>
-            <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;">
-               <children>
-                  <ImageView fitHeight="659.0" fitWidth="1042.0" layoutX="-7.0" pickOnBounds="true" AnchorPane.bottomAnchor="-9.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-32.0" AnchorPane.topAnchor="0.0">
-                     <image>
-                        <Image url="@../img/home.jpg" />
-                     </image>
-                     <cursor>
-                        <Cursor fx:constant="DEFAULT" />
-                     </cursor>
-                     <viewport>
-                        <Rectangle2D />
-                     </viewport>
-                  </ImageView>
-                  <Label layoutX="284.0" layoutY="217.0" prefHeight="144.0" prefWidth="346.0" styleClass="lblWitoutSize" stylesheets="@GeneralStyleSheet.css" text="Are you hungery?">
-                     <font>
-                        <Font size="36.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="346.0" layoutY="339.0" styleClass="lblWitoutSize" stylesheets="@GeneralStyleSheet.css" text="Don't wait!">
-                     <font>
-                        <Font size="48.0" />
-                     </font>
-                  </Label>
-               </children>
-            </AnchorPane>
+            <ImageView fitHeight="659.0" fitWidth="1042.0" layoutX="-7.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="-9.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-32.0" AnchorPane.topAnchor="0.0">
+               <image>
+                  <Image url="@../img/home.jpg" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+            <Label layoutX="284.0" layoutY="217.0" prefHeight="144.0" prefWidth="346.0" styleClass="lblWitoutSize" stylesheets="@GeneralStyleSheet.css" text="Are you hungery?">
+               <font>
+                  <Font size="36.0" />
+               </font>
+            </Label>
+            <Label layoutX="346.0" layoutY="339.0" styleClass="lblWitoutSize" stylesheets="@GeneralStyleSheet.css" text="Don't wait!">
+               <font>
+                  <Font size="48.0" />
+               </font>
+            </Label>
          </children>
-      </HBox>
+      </AnchorPane>
    </children>
 </VBox>
