--- a/src/gui/report/QuarterlyHistogramScreen.fxml
+++ b/src/gui/report/QuarterlyHistogramScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
@@ -7,61 +8,98 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
 <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="report.QuarterlyHistogramController">
    <children>
-      <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0" VBox.vgrow="ALWAYS">
+      <HBox alignment="CENTER" VBox.vgrow="ALWAYS">
          <children>
-            <BarChart fx:id="branch_histogram" layoutX="366.0" layoutY="91.0" prefHeight="424.0" prefWidth="559.0">
-              <xAxis>
-                <CategoryAxis label="Restaurant" side="BOTTOM" tickMarkVisible="false" fx:id="xAxis" />
-              </xAxis>
-              <yAxis>
-                <NumberAxis fx:id="yAxis" label="Orders Amount" side="LEFT" />
-              </yAxis>
-            </BarChart>
-            <Button fx:id="show_branch_btn" layoutX="646.0" layoutY="530.0" mnemonicParsing="false" onAction="#showBranch" styleClass="ViewBtn" text="Show" />
-            <CheckBox fx:id="compare_ceckbox" layoutX="100.0" layoutY="303.0" mnemonicParsing="false" text="Compare" />
-            <GridPane layoutX="85.0" layoutY="108.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="119.0" vgap="40.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <Pane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="1010.0">
                <children>
-                  <ComboBox fx:id="type_select_combo" prefHeight="31.0" prefWidth="158.0" promptText="Type" styleClass="comboBox" GridPane.rowIndex="3" />
-                  <ComboBox fx:id="branch_select_combo" prefHeight="31.0" prefWidth="158.0" promptText="Branch" styleClass="comboBox" GridPane.rowIndex="2" />
-                  <ComboBox fx:id="quarter_comboBox" prefWidth="150.0" promptText="Quarter" styleClass="comboBox" GridPane.rowIndex="1" />
-                  <ComboBox fx:id="year_comboBox1" prefWidth="150.0" promptText="Year" styleClass="comboBox" />
+                  <BarChart fx:id="branch_histogram" layoutX="366.0" layoutY="91.0" prefHeight="424.0" prefWidth="559.0">
+                    <xAxis>
+                      <CategoryAxis label="Restaurant" side="BOTTOM" tickMarkVisible="false" fx:id="xAxis" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis fx:id="yAxis" label="Orders Amount" side="LEFT" />
+                    </yAxis>
+                  </BarChart>
+                  <Button fx:id="show_branch_btn" layoutX="639.0" layoutY="532.0" mnemonicParsing="false" onAction="#showBranch" prefHeight="36.0" prefWidth="66.0" text="Show">
+                     <styleClass>
+                        <String fx:value="ViewBtnOrange" />
+                        <String fx:value="lbl" />
+                     </styleClass>
+                  </Button>
+                  <CheckBox fx:id="compare_ceckbox" layoutX="100.0" layoutY="303.0" mnemonicParsing="false" styleClass="lbl" stylesheets="@../general/GeneralStyleSheet.css" text="Compare" />
+                  <GridPane layoutX="85.0" layoutY="108.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="120.0" prefWidth="119.0" vgap="40.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <ComboBox fx:id="type_select_combo" prefHeight="31.0" prefWidth="158.0" promptText="Type" GridPane.rowIndex="3">
+                           <styleClass>
+                              <String fx:value="comboBox" />
+                              <String fx:value="lbl" />
+                           </styleClass>
+                        </ComboBox>
+                        <ComboBox fx:id="branch_select_combo" prefHeight="31.0" prefWidth="158.0" promptText="Branch" GridPane.rowIndex="2">
+                           <styleClass>
+                              <String fx:value="comboBox" />
+                              <String fx:value="lbl" />
+                           </styleClass>
+                        </ComboBox>
+                        <ComboBox fx:id="quarter_comboBox" prefWidth="150.0" promptText="Quarter" GridPane.rowIndex="1">
+                           <styleClass>
+                              <String fx:value="comboBox" />
+                              <String fx:value="lbl" />
+                           </styleClass>
+                        </ComboBox>
+                        <ComboBox fx:id="year_comboBox1" prefWidth="150.0" promptText="Year">
+                           <styleClass>
+                              <String fx:value="comboBox" />
+                              <String fx:value="lbl" />
+                           </styleClass>
+                        </ComboBox>
+                     </children>
+                  </GridPane>
+                  <GridPane fx:id="grid_options" layoutX="85.0" layoutY="383.0" prefHeight="90.0" prefWidth="119.0" vgap="40.0" visible="false">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <ComboBox fx:id="branch_select_combo1" prefHeight="31.0" prefWidth="158.0" promptText="Branch" styleClass="comboBox" GridPane.rowIndex="3" />
+                        <ComboBox fx:id="quarter_comboBox1" prefWidth="150.0" promptText="Quarter" styleClass="comboBox" GridPane.rowIndex="2" />
+                        <ComboBox fx:id="year_comboBox11" prefWidth="150.0" promptText="Year" styleClass="comboBox" GridPane.rowIndex="1" />
+                        <Label fx:id="compareTo_lbl" text="Compare to:" />
+                     </children>
+                  </GridPane>
+                  <ImageView fitHeight="136.0" fitWidth="107.0" layoutX="925.0" layoutY="506.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/undraw_Task_re_wi3v.png" />
+                     </image>
+                  </ImageView>
                </children>
-            </GridPane>
-            <GridPane fx:id="grid_options" layoutX="85.0" layoutY="383.0" prefHeight="90.0" prefWidth="119.0" vgap="40.0" visible="false">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <ComboBox fx:id="branch_select_combo1" prefHeight="31.0" prefWidth="158.0" promptText="Branch" styleClass="comboBox" GridPane.rowIndex="3" />
-                  <ComboBox fx:id="quarter_comboBox1" prefWidth="150.0" promptText="Quarter" styleClass="comboBox" GridPane.rowIndex="2" />
-                  <ComboBox fx:id="year_comboBox11" prefWidth="150.0" promptText="Year" styleClass="comboBox" GridPane.rowIndex="1" />
-                  <Label fx:id="compareTo_lbl" text="Compare to:" />
-               </children>
-            </GridPane>
+            </Pane>
          </children>
-      </Pane>
+      </HBox>
    </children>
 </VBox>
