--- a/bin/branch_manager/RegNewAccountP1Screen.fxml
+++ b/bin/branch_manager/RegNewAccountP1Screen.fxml
@@ -14,14 +14,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.RegNewAccountP1Controller">
+<VBox alignment="CENTER" fillWidth="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="650.0" prefWidth="1010.0" stylesheets="@../general/GeneralStyleSheet.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="managment.RegNewAccountP1Controller">
    <children>
       <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="650.0" minWidth="1010.0" prefHeight="650.0" prefWidth="1010.0" style="-fx-background-color: #fff;" VBox.vgrow="ALWAYS">
          <children>
-            <GridPane layoutX="390.0" layoutY="97.0" prefHeight="316.0" prefWidth="422.0">
+            <GridPane layoutX="390.0" layoutY="101.0" prefHeight="312.0" prefWidth="523.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.0" minWidth="10.0" prefWidth="173.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.0" minWidth="10.0" prefWidth="173.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="350.0" minWidth="10.0" prefWidth="300.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints maxHeight="35.0" minHeight="10.0" prefHeight="31.0" vgrow="SOMETIMES" />
@@ -51,7 +51,7 @@
                         <String fx:value="lbl" />
                      </styleClass>
                   </TextField>
-                  <TextField fx:id="telephone_lbl" prefHeight="15.0" prefWidth="211.0" promptText="Telephone" GridPane.rowIndex="3">
+                  <TextField fx:id="telephone_lbl" prefHeight="15.0" prefWidth="211.0" promptText="Telephone(Optional)" GridPane.rowIndex="3">
                      <styleClass>
                         <String fx:value="text-box" />
                         <String fx:value="lbl" />
@@ -69,7 +69,7 @@
                         <String fx:value="lbl" />
                      </styleClass>
                   </TextField>
-                  <Label fx:id="first_error_lbl" prefHeight="17.0" prefWidth="248.0" textFill="RED" GridPane.columnIndex="1">
+                  <Label fx:id="first_error_lbl" prefHeight="17.0" prefWidth="240.0" textFill="RED" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" />
                      </GridPane.margin>
